# fiach

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  example.fiach.toml  flake.nix
.agents/skills/cashu/: SKILL.md
personas/: code-quality-persona.md  security-persona.md
src/: config.rs  daemon.rs  disclose.rs  main.rs  persona.rs  review.rs  server.rs  state.rs  workspace.rs
