[package]
name = "fiach"
version = "0.1.0"
edition = "2024"

[dependencies]
goose = { git = "https://github.com/aaif-goose/goose", tag = "v1.30.0", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dotenvy = "0.15"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rmcp = "1.2.0"
tokio-util = "0.7.18"
redb = "4"
time = { version = "0.3", features = ["formatting", "parsing"] }
tempfile = "3.27.0"
config = { version = "0.15.22", features = ["toml"] }

# Goose's workspace [patch.crates-io] doesn't propagate to downstream consumers.
# sacp "unstable" feature only exists in the git fork, not on crates.io.
# rmcp must be pinned to 1.2.0 — goose uses struct expressions on types that became
# #[non_exhaustive] in rmcp 1.3.0 (StreamableHttpClientTransportConfig, StoredCredentials).
[patch.crates-io]
sacp = { git = "https://github.com/agentclientprotocol/symposium-acp", rev = "14086c9" }
sacp-derive = { git = "https://github.com/agentclientprotocol/symposium-acp", rev = "14086c9" }
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", tag = "rmcp-v1.2.0" }
rmcp-macros = { git = "https://github.com/modelcontextprotocol/rust-sdk", tag = "rmcp-v1.2.0" }
